--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+/* FONTS */
+@font-face {
+    font-family: 'Roboto SemiCondensed';
+    src: url('../fonts/RobotoSemiCondensed-Medium.woff2') format('woff2'),
+        url('../fonts/RobotoSemiCondensed-Medium.woff') format('woff'),
+        url('../fonts/RobotoSemiCondensed-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto SemiCondensed';
+    src: url('../fonts/RobotoSemiCondensed-Regular.woff2') format('woff2'),
+        url('../fonts/RobotoSemiCondensed-Regular.woff') format('woff'),
+        url('../fonts/RobotoSemiCondensed-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
+        url('../fonts/Roboto-Bold.woff') format('woff'),
+        url('Roboto-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url('../fonts/RobotoCondensed-Bold.woff2') format('woff2'),
+        url('../fonts/RobotoCondensed-Bold.woff') format('woff'),
+        url('../fonts/RobotoCondensed-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
+
 * {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
@@ -14,6 +58,7 @@
 }
 
 body {
+	font-family: "Roboto", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
@@ -170,3 +215,10 @@ width: 510px;
 height: 510px;
 border-radius: 8px;
 }
+
+
+/*
+
+Roboto =>400 500, 700
+Roboto Condensed => 700
+ */
